Version 2.3.0.9000
------------------------------------------------------------------------------
* Starting new developer version.

Version 2.3.0
------------------------------------------------------------------------------
* Implemented language support.
* Italian and Spanish language files.
* New functions:
  - calculateStatistics/calculateStatistics_gui
  General funcion to calculate summary statistics.
* Deprecated functions:
  - tableBalance/tableBalance_gui
  - tableCapillary/tableCapillary_gui
  - tablePrecision/tablePrecision_gui
  - tableStutter/tableStutter_gui
  Use calculateStatistics/calculateStatistics_gui instead.
* Bug fixes and improvements with the most significant listed below:
  - auditTrail
  Added timestamp attribute.
  - listObjects
  Added parameters "sort" and "decreasing". Now returns NULL if no result.
  - getKit
  Better description of parameter 'what'.
  - calculateDropout_gui
  Changed LDT to AT for analytical threshold in gui.
  - strvalidator
  Made Decsription in Projects tab hidden and inactive as default.
  Fixed potential "memory leak" by adding parent = emptyenv() to new.env()
  - plotSlope_gui
  Fixed narrow dropdown with hidden argument ellipsize = "none".
  - plotStutter_gui, plotPrecision_gui
  Added controls of main, x, y and facet titles.
  - readBinsFile
  Fixed failed detection of "virtual" when trailing tabs, leading to error in combineBinsAndPanels.
  - plotKit_gui
  Made the scrollable checkbox expand with the window.
  - tablePrecision_gui
  Further adjustments to gui.
  - export_gui
  Compacted and tweaked gui for tcltk.
  - export
  Added support for comma separated names.
  - calculateMixture_gui
  Compacted gui and expand text field under tcltk.
  - tablePrecision_gui
  Fixed strange behaviour when selecting from tables (double click/drag and drop).
  - tablePrecision_gui
  Improved tables with set initial height.
  Fixed save field not expanded (tcltk).
  - calculateResultType_gui