@@ -1,5 +1,6 @@
 ################################################################################
 # CHANGE LOG (last 20 changes)
+# 11.05.2021: Removed unused imports. Fixes issue#19.
 # 04.07.2020: Fixed no visible binding for variables.
 # 02.05.2020: Added language support.
 # 06.09.2019: Fixed narrow dropdown with hidden argument ellipsize = "none".
@@ -31,9 +32,6 @@
 #' @export
 #'
 #' @importFrom utils help str
-#' @importFrom stats as.formula
-#' @importFrom grid unit textGrob grid.newpage grid.draw
-#' @importFrom gridExtra arrangeGrob
 #' @importFrom ggplot2 ggplot aes_string geom_point theme element_text labs
 #'  xlab ylab theme_gray theme_bw theme_linedraw theme_light theme_dark
 #'  theme_minimal theme_classic theme_void geom_errorbar position_dodge
@@ -362,33 +360,20 @@ plotSlope_gui <- function(env = parent.frame(), savegui = NULL, debug = FALSE, p
     ellipsize = "none"
   )
 
-  # FRAME 7 ###################################################################
-
-  f7 <- gframe(
-    text = strFrmPlot,
-    horizontal = TRUE,
-    container = gv
+  # BUTTON ####################################################################
+  
+  plot_sample_btn <- gbutton(
+    text = strBtnPlot, container = gv,
+    expand = TRUE, fill = TRUE
   )
-
-  plot_sample_btn <- gbutton(text = strBtnPlot, container = f7)
-
+  tooltip(plot_sample_btn) <- "Plot slope by sample and group"
+  
   addHandlerChanged(plot_sample_btn, handler = function(h, ...) {
-
-    # Check if suitable for plot.
-    requiredCol <- c("Sample.Name", "Group", "Slope", "Lower", "Upper")
-
-    ok <- checkDataset(
-      name = val_obj, reqcol = requiredCol,
-      env = env, parent = w, debug = debug
-    )
-
-    if (ok) {
-      enabled(plot_sample_btn) <- FALSE
-      .plotSlope(what = "Sample")
-      enabled(plot_sample_btn) <- TRUE
-    }
+    enabled(plot_sample_btn) <- FALSE
+    .plot()
+    enabled(plot_sample_btn) <- TRUE
   })
-
+  
   # FRAME 5 ###################################################################
 
   f5 <- gframe(
@@ -477,7 +462,7 @@ plotSlope_gui <- function(env = parent.frame(), savegui = NULL, debug = FALSE, p
 
   # FUNCTIONS #################################################################
 
-  .plotSlope <- function(what) {
+  .plot <- function() {
 
     # Get values.
     val_titles <- svalue(titles_chk)
@@ -572,6 +557,7 @@ plotSlope_gui <- function(env = parent.frame(), savegui = NULL, debug = FALSE, p
         icon = "error"
       )
     }
+
   }
 
   # INTERNAL FUNCTIONS ########################################################
